# Crypto_C

./: .gitignore  CMakeLists.txt  run.sh
SEED/: CMakeLists.txt
SEED/include/: seed.h
SEED/lib/: CMakeLists.txt  seed.c
SEED/test/: test.c
include/: block.h  test.h  util.h
include/crypto/: aria.h  lea.h
lib/: CMakeLists.txt  aria.c  block.c  lea.c  test.c  util.c
test/: CMakeLists.txt  test.c  test_aria.c  test_lea.c
test/tv/: lea_tv.txt
